# ADA502-FireGuard-Project

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  brainstorm.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  main.py  pyproject.toml
backend/src/: config.py
backend/src/app/: auth.py  background.py  database.py  main.py  models.py  schemas.py
backend/src/app/db/: database.py  models.py
backend/src/app/routers/: history_router.py  risk_router.py  subscription.py  zones.py
backend/src/app/services/: event_processor_service.py  history_service.py  mqtt_service.py  risk_service.py  subscription_service.py  thingspeak_service.py  zone_service.py
backend/src/app/utils/: constants.py  grid.py  redis.py
backend/src/frcm/: __main__.py
backend/tests/: conftest.py  test_event_processor.py  test_history_service.py  test_main.py  test_risk.py  test_subscription_service.py  test_subscriptions.py  test_zones.py
frontend/: .env.example  Dockerfile  Dockerfile.dev  README.md  nginx.conf  nginx.prod.conf  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css  keycloak.ts  main.tsx
frontend/src/components/: HistoryWidget.tsx  LocationSubscriber.tsx  RiskAlertsWidget.tsx  RiskLegendWidget.tsx  SubscriptionPanel.tsx  TestRiskAPI.tsx  theme-provider.tsx
frontend/src/components/map/: MapPatterns.tsx  map-resizer.tsx  map-styles.ts  map-view.tsx  selection-map.tsx
frontend/src/components/ui/: sheet.tsx
frontend/src/hooks/: use-location-stream.ts  use-subscriptions.ts  use-zones.ts
frontend/src/lib/: api.ts  mock-data.ts  types.ts
frontend/src/pages/: DashboardPage.tsx  HomePage.tsx
frontend/src/services/: risk_services.js  risk_services.jsx
frontend/src/tests/: App.test.tsx
frontend/src/types/: map.ts
intelligence-system/: .env.example  Dockerfile  README.md  main.py  pyproject.toml
intelligence-system/src/: cities.py  config.py  database.py  grid_utils.py  main.py  met_api.py  models.py  risk_calculator.py
intelligence-system/src/db/: database.py  models.py
intelligence-system/src/frcm/: __init__.py  __main__.py
intelligence-system/src/frcm/datamodel/: model.py  utils.py
intelligence-system/src/frcm/fireriskmodel/: compute.py  parameters.py  preprocess.py  utils.py
intelligence-system/src/services/: zone_processor.py
intelligence-system/src/tests/: test_run.py
intelligence-system/src/utils/: __init__.py  fire_risk_service.py  grid_utils.py  risk_calculator.py
intelligence-system/tests/: conftest.py  mock_db.py  test_data_fetch.py  test_database.py  test_grid_utils.py  test_main.py  test_zone_processor.py
